objects/Stockwave_GeniusSync__c.object
<CustomObject>
    <description>To assign Auction Authorization numbers to Accounts.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stockwave + GeniusSyncs</relationshipLabel>
        <relationshipName>Stockwave_GeniusSyncs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Auction_Access__c</fullName>
        <label>Auction Access #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>POA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POA</label>
        <referenceTo>POA__c</referenceTo>
        <relationshipLabel>Stockwave + GeniusSyncs</relationshipLabel>
        <relationshipName>Stockwave_GeniusSyncs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stockwave + GeniusSync</label>
    <nameField>
        <label>Stockwave + GeniusSync Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stockwave + GeniusSyncs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>